test_output.txt

> npx@0.1.0 test
> react-scripts test --watchAll=false

(node:73778) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
PASS src/pages/moving-network-speed-test/component/previous-test-run.test.js
PASS src/pages/moving-network-speed-test/lib/services/network-resilience.test.js
  ● Console

    console.log
      [NetworkResilience] Checking network connectivity

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:67:17)

    console.log
      [NetworkResilience] Testing endpoint: https://www.google.com/favicon.ico

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:81:21)

    console.log
      [NetworkResilience] Online - Response time: 100ms, Quality: good

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:104:21)

    console.log
      [NetworkResilience] Checking network connectivity

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:67:17)

    console.log
      [NetworkResilience] Testing endpoint: https://www.google.com/favicon.ico

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:81:21)

    console.log
      [NetworkResilience] Online - Response time: 2500ms, Quality: poor

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:104:21)

    console.log
      [NetworkResilience] Checking network connectivity

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:67:17)

    console.log
      [NetworkResilience] Testing endpoint: https://www.google.com/favicon.ico

      at Function.checkNetworkConnectivity (src/pages/moving-network-speed-test/lib/services/network-resilience.js:81:21)

PASS src/pages/moving-network-speed-test/component/export-manager.test.js
PASS src/pages/moving-network-speed-test/component/current-session-display.test.js
PASS src/components/navbar/index.test.jsx
PASS src/pages/moving-network-speed-test/lib/models/test-run.test.js
PASS src/pages/moving-network-speed-test/lib/utils/formatters.test.js
PASS src/util/read-file/from-form.test.js
PASS src/pages/moving-network-speed-test/lib/services/dynamic-measurements.test.js
FAIL src/pages/moving-network-speed-test/lib/services/test-orchestrator.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /Users/charlesgillham/Developer/tools.gillham-net.co.uk/src/pages/moving-network-speed-test/lib/services/test-orchestrator.js:29
          'network-quality': () => new Worker(new URL('../workers/network-quality.worker.js', import.meta.url)),
                                                                                                     ^^^^

    SyntaxError: Cannot use 'import.meta' outside a module

      14 | // Mock the module to avoid import.meta.url issues
      15 | jest.mock('./test-orchestrator', () => {
    > 16 |     const actualModule = jest.requireActual('./test-orchestrator');
         |                               ^
      17 |     return {
      18 |         ...actualModule,
      19 |         TestOrchestrator: class extends actualModule.TestOrchestrator {

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at src/pages/moving-network-speed-test/lib/services/test-orchestrator.test.js:16:31
      at Object.<anonymous> (src/pages/moving-network-speed-test/lib/services/test-orchestrator.test.js:1:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

Test Suites: 1 failed, 9 passed, 10 total
Tests:       3 skipped, 191 passed, 194 total
Snapshots:   0 total
Time:        1.26 s
Ran all test suites.
